services.yml
apiVersion: v1
kind: Service
metadata:
 name: php
spec:
 selector:
  app: php
 ports:
  - port: 80
    targetPort: 80
 type: LoadBalancer
 
---
apiVersion: v1
kind: Service
metadata:
 name: mysql-connection
spec:
 ports:
  - port: 3306
 selector:
  app: mysql
 clusterIP: None
 type: ClusterIP
