deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mysql
spec:
 selector:
   matchLabels:
     app: mysql
 template:
   metadata:
     labels:
       app: mysql
   spec:
     containers:
       - image: arthurgb80/projeto-database:1.0
         args:
           - "--ignore-db-dir=lost+found"
         imagePullPolicy: Always
         name: mysql
         ports:
           - containerPort: 3306
             name: mysql
         volumeMounts:
           - name: mysql-dados
             mountPath: /var/lib/mysql/

     volumes:
       - name: mysql-dados
         persistentVolumeClaim:
           claimName: mysql-dados

---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: php
 labels:
   app: php
spec:
 replicas: 2
 selector:
   matchLabels:
     app: php
 template:
   metadata:
     labels:
       app: php
   spec:
     containers:
       - name: php
         image: arthurgb80/projeto-backend:1.0
         imagePullPolicy: Always
         ports:
           - containerPort: 80

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
 name: php-route
spec:
 to:
   kind: Service
   name: php
 tls:
   termination: edge
