route.yml
apiVersion: v1
kind: Route
metadata:
 name: php-route
spec:
 to:
  kind: Service
  name: php
